# utk-course-checker

./: .dockerignore  Dockerfile  README.md  check.py  docker-compose.yml  pyproject.toml  requirements.txt  watchlist.txt
